
name:                 api
version:              0.0.1.0
homepage:             https://github.com/open-budget/api
bug-reports:          https://github.com/open-budget/api/issues
license:              MIT
license-file:         LICENSE
author:               Sergey Gerasimov
maintainer:           mail@grsmv.com
category:             Web
build-type:           Simple
cabal-version:        >=1.10
data-files:
    data/*.csv
    , data/documents/*.csv
    , resourses/index.html

library
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:    Paths_api

    exposed-modules:
        OpenBudget.Builder
        OpenBudget.Types.Area
        OpenBudget.Types.Database
        OpenBudget.Types.Document
        OpenBudget.Types.Expense

    build-depends:
        base
        , aeson == 0.7.0.3
        , csv == 0.1.1
        , hspec == 1.9.2
        , scotty == 0.7.2
        , text
        , time
        , utility-ht == 0.0.8


executable api
    default-language: Haskell2010
    ghc-options:      -Wall -fwarn-tabs -threaded
    hs-source-dirs:   src-exec
    main-is:          Main.hs

    build-depends:
        base
        , aeson == 0.7.0.3
        , csv == 0.1.1
        , api
        , scotty == 0.7.2

test-suite test
    default-language: Haskell2010
    ghc-options:      -Wall -fhpc
    hs-source-dirs:   spec
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0

    build-depends:
        base
        , csv == 0.1.1
        , hspec == 1.9.2
        , directory
        , api
