
name:                 api
version:              0.0.1.0
homepage:             https://github.com/open-budget/api
bug-reports:          https://github.com/open-budget/api/issues
license:              MIT
license-file:         LICENSE
author:               Sergey Gerasimov
maintainer:           mail@grsmv.com
category:             Web
build-type:           Simple
cabal-version:        >=1.10
data-files:
    resourses/index.html

library
    hs-source-dirs:   src
    default-language: Haskell2010

    exposed-modules:
        OpenBudget.Builder
        OpenBudget.Types.Area
        OpenBudget.Types.Database
        OpenBudget.Types.Document
        OpenBudget.Types.Expense

    build-depends:
          base
        , aeson == 0.10.0.0
        , csv == 0.1.2
        , hspec == 2.2.1
        , scotty == 0.10.2
        , text
        , time
        , utility-ht == 0.0.11


executable api
    default-language: Haskell2010
    ghc-options:      -Wall -fwarn-tabs -threaded
    main-is:          Main.hs

    build-depends:
          base
        , aeson == 0.10.0.0
        , csv == 0.1.2
        , api
        , scotty == 0.10.2
        , containers == 0.5.6.2

test-suite test
    default-language: Haskell2010
    ghc-options:      -Wall -fhpc
    hs-source-dirs:   spec
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0

    build-depends:
          base
        , csv == 0.1.2
        , hspec == 2.2.1
        , directory
        , api
